# AlgoDataStruct

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  README.md  clang-toolchain.cmake  gcc-toolchain.cmake  package-lock.json
.zed/: debug.json  settings.json  tasks.json
Cpp/Linear/Doubly-Linked-Lists/: Axiomatic-Specification.md  DoublyLinekdList.hpp
Documentation/: README-EN.md  README.md  log.md
Documentation/Lists/: README-EN.md  README-IT.md
Project/: README.md
Project/Plan/: 00_Piano_Generale.md  01_Fase1_Liste_Heap.md  02_Fase2_AVL_HashTable.md  03_Fase3_Grafi_HashMap_PriorityQueue.md  04_Fase4_Alberi_Avanzati.md  04_Guida_Implementazione.md  README_Piano.md
apps/: CMakeLists.txt  Makefile
apps/snake/: CMakeLists.txt
apps/snake/include/snake/: Snake_Engine.hpp
apps/snake/src/: Snake_Engine.cpp  main_Snake_Stress.cc  main_Snake_TUI.cc
apps/snake/tests/: Test_Snake_Engine.cpp
cmake/: BuildOptions.cmake  CompilerSetup.cmake  GoogleTest.cmake  LibraryDefinition.cmake  MainExecutables.cmake
examples/algorithms/: main_String_Algorithms.cc
examples/arrays/: main_Circular_Array.cc  main_Dynamic_Array.cc  main_Dynamic_Bitset.cc  main_Static_Array.cc
examples/associative/: main_Hash_Map.cc  main_Tree_Map.cc
examples/graphs/: main_Dijkstra_Integration.cc  main_Disjoint_Set_Union.cc  main_Graph_Adjacency_List.cc  main_Graph_Adjacency_Matrix.cc  main_Graph_Algorithms.cc
examples/hash/: main_Hash_Table_Chaining.cc  main_Hash_Table_Open_Addressing.cc
examples/heaps/: main_Binomial_Heap.cc  main_D_Ary_Heap.cc  main_Fibonacci_Heap.cc  main_Heaps.cc  main_Leftist_Heap.cc  main_Pairing_Heap.cc  main_Skew_Heap.cc
examples/lists/: main_Circular_Linked_List.cc  main_Doubly_Linked_List.cc  main_Singly_Linked_List.cc
examples/matrices/: main_Sparse_Matrix.cc
examples/probabilistic/: main_Bloom_Filter.cc  main_Count_Min_Sketch.cc  main_Cuckoo_Filter.cc  main_HyperLogLog.cc
examples/queues/: main_Deque.cc  main_Priority_Queue.cc
examples/range/: main_Fenwick_Tree.cc  main_Segment_Tree.cc  main_Sparse_Table.cc  main_Sqrt_Decomposition.cc
examples/stacks/: main_Stacks_Queues.cc
examples/trees/: main_Complete_Binary_Tree.cc
examples/trees/range/: main_Fenwick_Tree.cc  main_Segment_Tree.cc
examples/trees/search/: main_AVL_Tree.cc  main_BPlus_Tree.cc  main_B_Tree.cc  main_Binary_Search_Tree.cc  main_Cartesian_Tree.cc  main_Interval_Tree.cc  main_KD_Tree.cc  (+2 more)
include/: ads_pch.hpp
include/support/: Concept_Aliases.hpp  Container_Facade.hpp  Demo_Utilities.hpp  Indexed_Iterator.hpp  Support.hpp  Terminal_Colors.hpp
scripts/: benchmark_build.sh  format_section_dividers.py  script_common.sh  validate_pch.sh
src/: main.cc  main_AVL_Tree.cc  main_B_Tree.cc  main_Binary_Search_Tree.cc  main_Bloom_Filter.cc  main_Circular_Array.cc  main_Circular_Linked_List.cc  main_Complete_Binary_Tree.cc  main_D_Ary_Heap.cc  main_Deque.cc  main_Dijkstra_Integration.cc  main_Disjoint_Set_Union.cc  main_Doubly_Linked_List.cc  main_Dynamic_Array.cc  main_Fenwick_Tree.cc  main_Graph_Adjacency_List.cc  main_Graph_Adjacency_Matrix.cc  main_Graph_Algorithms.cc  main_Hash_Map.cc  main_Hash_Table_Chaining.cc  main_Hash_Table_Open_Addressing.cc  main_Heaps.cc  main_Linked_Lists.cc  main_Priority_Queue.cc  main_Red_Black_Tree.cc  main_Segment_Tree.cc  main_Singly_Linked_List.cc  main_Sparse_Matrix.cc  main_Stacks_Queues.cc  main_Static_Array.cc  main_String_Algorithms.cc  main_Treap.cc  main_Tree_Map.cc  main_Trie.cc  test_stack_queue.cc
tests/: Test_AVLTree.cpp  Test_AVL_Tree.cpp  Test_Array_Concepts.cpp  Test_Array_View.cpp  Test_BTree.cpp  Test_B_Tree.cpp  Test_BinarySearchTree.cpp  Test_Binary_Search_Tree.cpp  Test_Bloom_Filter.cpp  Test_Circular_Array.cpp  Test_Circular_Linked_List.cpp  Test_Complete_Binary_Tree.cpp  Test_D_Ary_Heap.cpp  Test_Deque.cpp  Test_Disjoint_Set_Union.cpp  Test_DoublyLinkedList.cpp  Test_Doubly_Linked_List.cpp  Test_Dynamic_Array.cpp  Test_Fenwick_Tree.cpp  Test_Fenwick_Tree_Range_Update.cpp  Test_Gap_Buffer.cpp  Test_Graph_Adjacency_List.cpp  Test_Graph_Adjacency_Matrix.cpp  Test_Graph_Algorithms.cpp  Test_HashTables.cpp  Test_Hash_Set.cpp  Test_Hash_Tables.cpp  Test_Heaps.cpp  Test_Nary_Tree.cpp  Test_Priority_Queue.cpp  Test_Queues.cpp  Test_RedBlackTree.cpp  Test_Red_Black_Tree.cpp  Test_Red_Black_Tree_Adversarial.cpp  Test_Segment_Tree.cpp  Test_SinglyLinkedList.cpp  Test_Singly_Linked_List.cpp  Test_Sorting.cpp  Test_Sparse_Matrix.cpp  Test_Splay_Tree.cpp  (+13 more)
tests/algebra/: Test_Algebra.cpp
tests/algorithms/: Test_Sorting.cpp  Test_String_Algorithms.cpp
tests/arrays/: Test_Array_Concepts.cpp  Test_Array_View.cpp  Test_Circular_Array.cpp  Test_Dynamic_Array.cpp  Test_Dynamic_Bitset.cpp  Test_Gap_Buffer.cpp  Test_Static_Array.cpp  Test_Static_Vector.cpp
tests/associative/: Test_Hash_Set.cpp  Test_Tree_Map.cpp  Test_Tree_Set.cpp
tests/graphs/: Test_Disjoint_Set_Union.cpp  Test_Graph_Adjacency_List.cpp  Test_Graph_Adjacency_Matrix.cpp  Test_Graph_Algorithms.cpp
tests/hash/: Test_Hash_Tables.cpp
tests/heaps/: Meldable_Heap_Test_Support.hpp  Test_Binomial_Heap.cpp  Test_D_Ary_Heap.cpp  Test_Fibonacci_Heap.cpp  Test_Heaps.cpp  Test_Leftist_Heap.cpp  Test_Pairing_Heap.cpp  Test_Skew_Heap.cpp
tests/lists/: Test_Circular_Linked_List.cpp  Test_Doubly_Linked_List.cpp  Test_Singly_Linked_List.cpp
tests/matrices/: Test_Sparse_Matrix.cpp
tests/old/: test_Binary_Search_Tree.cpp  test_Singly_Linked_List.cpp
tests/probabilistic/: Test_Bloom_Filter.cpp  Test_Count_Min_Sketch.cpp  Test_Cuckoo_Filter.cpp  Test_HyperLogLog.cpp
tests/queues/: Test_Deque.cpp  Test_Priority_Queue.cpp  Test_Queues.cpp  Test_Static_Queue.cpp
tests/range/: Test_Fenwick_Tree.cpp  Test_Fenwick_Tree_Range_Update.cpp  Test_Lazy_Segment_Tree.cpp  Test_Segment_Tree.cpp  Test_Sparse_Table.cpp  Test_Sqrt_Decomposition.cpp
tests/regressions/: Test_Audit_Regressions.cpp
tests/stacks/: Test_Stacks.cpp  Test_Static_Stack.cpp
tests/trees/: Test_Complete_Binary_Tree.cpp  Test_Nary_Tree.cpp  Test_Tree_Concepts.cpp
(+216 files in other folders)
